[workspace]
[package]
version = "0.1.0"
name = "simple-signature-script"
edition = "2021"

[dependencies]
sp1-core-executor = { path = "../../../../sp1/crates/core/executor" }
sp1-prover = { path = "../../../../sp1/crates/prover" }
sp1-sdk = { path = "../../../../sp1/crates/sdk" }
sp1-stark = { path = "../../../../sp1/crates/stark" }

[build-dependencies]
sp1-helper = { path = "../../../../sp1/crates/helper" }
